--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "react-native-localization": "^1.0.7",
     "react-native-picker": "^4.3.6",
     "react-native-sensitive-info": "^5.1.0",
-    "react-navigation": "1.5.11",
-    "react-navigation-redux-helpers": "^1.0.6",
+    "react-navigation": "^2.3.0",
+    "react-navigation-redux-helpers": "^2.0.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
